--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,14 +59,11 @@ jobs:
 
   - job: Fuzz_regression
     pool:
-      vmImage: "ubuntu-18.04"
+      vmImage: "ubuntu-16.04"
     variables:
       rust_toolchain: nightly-2019-08-15
     steps:
-      - task: Bash@3
-        inputs:
-          filePath: 'fuzzit.sh'
-          arguments: 'local-regression'
+      - bash: fuzzit.sh local-regression
 
   - job: Check
     pool:
