Update Azure config

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,12 +58,13 @@ jobs:
         condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
 
   - job: Fuzz_regression
+    displayName: Fuzz regression
     pool:
       vmImage: "ubuntu-16.04"
     variables:
       rust_toolchain: nightly-2019-08-15
     steps:
-      - bash: fuzzit.sh local-regression
+      - bash: ./fuzzit.sh local-regression
 
   - job: Check
     pool:
