Add Fuzzit API key

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,6 +77,8 @@ jobs:
       - template: .azure/install-rust.yml
       - bash: cargo install cargo-fuzz
       - bash: ./fuzzit.sh fuzzing
+        env:
+          FUZZIT_API_KEY: ${FUZZIT_API_KEY}
 
   # - job: Check
   #   pool:
